// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config import "frodo config import --file test/e2e/exports/all-separate/cloud/realm/root-alpha/script/mode.script.json" Import mode.script.json long with extracted scripts and no errors 1`] = `""`;

exports[`frodo config import "frodo config import --file test/e2e/exports/all-separate/cloud/realm/root-alpha/script/mode.script.json" Import mode.script.json long with extracted scripts and no errors 2`] = `
"✔ Finished Importing Everything to global!
✔ Finished Importing Everything to root-alpha realm!
✔ Finished Importing all other AM config entities!
"
`;

exports[`frodo config import "frodo config import --global --file test/e2e/exports/all-separate/classic/global/authenticationModules/authPushReg.authenticationModules.json --type classic" Fail to import authentication module due to it being read only. 1`] = `
"✔ Finished Importing Everything to global!
✔ Finished Importing all other AM config entities!
No imports were made
"
`;

exports[`frodo config import "frodo config import --global --file test/e2e/exports/all-separate/classic/global/authenticationModules/authPushReg.authenticationModules.json --type classic" Fail to import authentication module due to it being read only. 2`] = `1`;

exports[`frodo config import "frodo config import -AD test/e2e/exports/all-separate/forgeops -m forgeops" Import everything from directory "test/e2e/exports/all-separate/forgeops". 1`] = `
"Error Importing Services
  Error importing services
    Error putting global full service configs
      Error putting global full service config DataStoreService
        Error putting descendent 'application-store' of service 'DataStoreService'
          Network error:
            URL: https://nightly.gcp.forgeops.com/am/json/global-config/services/DataStoreService/config/application-store
            Status: 400
            Code: ERR_BAD_REQUEST
            Reason: Bad Request
            Message: The request body must include 'bindPassword'.
✔ Finished Importing Everything to global!
✔ Resolved all / realm dependencies.
• Finished importing / realm journeys
✔ Finished Importing Everything to root realm!
✔ Resolved all alpha realm dependencies.
• Finished importing alpha realm journeys
✔ Finished Importing Everything to root-alpha realm!
✔ Resolved all bravo realm dependencies.
• Finished importing bravo realm journeys
✔ Finished Importing Everything to root-bravo realm!
✔ Finished Importing all other AM config entities!
"
`;

exports[`frodo config import "frodo config import -AD test/e2e/exports/all-separate/forgeops -m forgeops" Import everything from directory "test/e2e/exports/all-separate/forgeops". 2`] = `1`;

exports[`frodo config import "frodo config import -af test/e2e/exports/all/all.forgeops.json -m forgeops" Import everything from "all.forgeops.json". 1`] = `
"Error Importing Services
  Error importing services
    Error putting global full service configs
      Error putting global full service config DataStoreService
        Error putting descendent 'application-store' of service 'DataStoreService'
          Network error:
            URL: https://nightly.gcp.forgeops.com/am/json/global-config/services/DataStoreService/config/application-store
            Status: 400
            Code: ERR_BAD_REQUEST
            Reason: Bad Request
            Message: The request body must include 'bindPassword'.
✔ Finished Importing Everything to global!
✔ Resolved all / realm dependencies.
• Finished importing / realm journeys
✔ Finished Importing Everything to root realm!
✔ Resolved all alpha realm dependencies.
• Finished importing alpha realm journeys
✔ Finished Importing Everything to root-alpha realm!
✔ Resolved all bravo realm dependencies.
• Finished importing bravo realm journeys
✔ Finished Importing Everything to root-bravo realm!
✔ Finished Importing all other AM config entities!
"
`;

exports[`frodo config import "frodo config import -af test/e2e/exports/all/all.forgeops.json -m forgeops" Import everything from "all.forgeops.json". 2`] = `1`;

exports[`frodo config import "frodo config import -f test/e2e/exports/all-separate/classic/realm/root/webhookService/Cool-Webhook.webhookService.json -m classic" Import the webhook service with no errors 1`] = `""`;

exports[`frodo config import "frodo config import -f test/e2e/exports/all-separate/classic/realm/root/webhookService/Cool-Webhook.webhookService.json -m classic" Import the webhook service with no errors 2`] = `
"✔ Finished Importing Everything to global!
✔ Finished Importing Everything to root realm!
✔ Finished Importing all other AM config entities!
"
`;

exports[`frodo config import "frodo config import -gf test/e2e/exports/all-separate/classic/global/server/01.server.json -m classic" Import server 01 along with extracted properties and no errors 1`] = `""`;

exports[`frodo config import "frodo config import -gf test/e2e/exports/all-separate/classic/global/server/01.server.json -m classic" Import server 01 along with extracted properties and no errors 2`] = `
"✔ Finished Importing Everything to global!
✔ Finished Importing all other AM config entities!
"
`;

exports[`frodo config import "frodo config import -gf test/e2e/exports/all-separate/cloud/global/sync/sync.idm.json" Import sync.idm.json along with extracted mappings and no errors 1`] = `""`;

exports[`frodo config import "frodo config import -gf test/e2e/exports/all-separate/cloud/global/sync/sync.idm.json" Import sync.idm.json along with extracted mappings and no errors 2`] = `
"✔ Finished Importing Everything to global!
✔ Finished Importing all other AM config entities!
"
`;
